#9 Updated NSS* classes

--- a/docs/api-reference/CRMScript.NetServer.NSPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPerson.yml
@@ -443,7 +443,7 @@ items:
   nameWithType: NSPerson.GetEmailName()
   fullName: CRMScript.NetServer.NSPerson.GetEmailName()
   type: Method
-  summary: "\nE-mail description\n"
+  summary: "\nEmail description\n"
   remarks: 
   syntax: 
     content: String GetEmailName()
@@ -1292,7 +1292,7 @@ items:
   nameWithType: NSPerson.SetEmailName(String)
   fullName: CRMScript.NetServer.NSPerson.SetEmailName(String)
   type: Method
-  summary: "\nE-mail description\n"
+  summary: "\nEmail description\n"
   remarks: 
   syntax: 
     content: Void SetEmailName(String emailName)
