--- a/docs/api-reference/CRMScript.NetServer.NSSaleStageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleStageEntity.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSSaleStageEntity.#ctor
   - CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
   - CRMScript.NetServer.NSSaleStageEntity.GetProbability()
   - CRMScript.NetServer.NSSaleStageEntity.GetRank()
   - CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
   - CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
   - CRMScript.NetServer.NSSaleStageEntity.GetValue()
-  - CRMScript.NetServer.NSSaleStageEntity.#ctor
   - CRMScript.NetServer.NSSaleStageEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSSaleStageEntity.SetProbability(Integer)
   - CRMScript.NetServer.NSSaleStageEntity.SetRank(Integer)
@@ -25,126 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSSaleStageEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSSaleStageEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
-  type: Method
-  summary: "\nIf true, the Sale stage is deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetProbability()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetProbability()
-  id: 'GetProbability()'
-  so.intellisense: NSSaleStageEntity.GetProbability
-  langs:
-  - crmscript
-  name: 'GetProbability()'
-  nameWithType: NSSaleStageEntity.GetProbability()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetProbability()
-  type: Method
-  summary: "\nThe numeric probability of the sale\n"
-  remarks: 
-  syntax: 
-    content: Integer GetProbability()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nInteger probability = thing.GetProbability();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSSaleStageEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSSaleStageEntity.GetRank()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetRank()
-  type: Method
-  summary: "\nRank order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
-  id: 'GetSaleStageId()'
-  so.intellisense: NSSaleStageEntity.GetSaleStageId
-  langs:
-  - crmscript
-  name: 'GetSaleStageId()'
-  nameWithType: NSSaleStageEntity.GetSaleStageId()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetSaleStageId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nInteger saleStageId = thing.GetSaleStageId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSSaleStageEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSSaleStageEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
-  type: Method
-  summary: "\nTooltip or other description\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleStageEntity.GetValue()
-  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSSaleStageEntity.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSSaleStageEntity.GetValue()
-  fullName: CRMScript.NetServer.NSSaleStageEntity.GetValue()
-  type: Method
-  summary: "\nThe sale stage\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSaleStageEntity thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleStageEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSaleStageEntity.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSSaleStageEntity
   example: 
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSSaleStageEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSSaleStageEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, the Sale stage is deleted
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetProbability()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetProbability()
+  id: 'GetProbability()'
+  so.intellisense: NSSaleStageEntity.GetProbability
+  langs:
+  - crmscript
+  name: 'GetProbability()'
+  nameWithType: NSSaleStageEntity.GetProbability()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetProbability()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetProbability()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The numeric probability of the sale
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nInteger probability = thing.GetProbability();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSSaleStageEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSSaleStageEntity.GetRank()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
+  id: 'GetSaleStageId()'
+  so.intellisense: NSSaleStageEntity.GetSaleStageId
+  langs:
+  - crmscript
+  name: 'GetSaleStageId()'
+  nameWithType: NSSaleStageEntity.GetSaleStageId()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetSaleStageId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetSaleStageId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nInteger saleStageId = thing.GetSaleStageId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSSaleStageEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSSaleStageEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip or other description
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSaleStageEntity.GetValue()
+  commentId: M:CRMScript.NetServer.NSSaleStageEntity.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSSaleStageEntity.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSSaleStageEntity.GetValue()
+  fullName: CRMScript.NetServer.NSSaleStageEntity.GetValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The sale stage
+  example: 
+  - "\n<pre><code>NSSaleStageEntity thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleStageEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSSaleStageEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -170,15 +170,15 @@ items:
   nameWithType: NSSaleStageEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nIf true, the Sale stage is deleted\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
-    return:
+      description: If true, the Sale stage is deleted
+    return: 
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSSaleStageEntity thing;\nBool deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
@@ -192,14 +192,14 @@ items:
   nameWithType: NSSaleStageEntity.SetProbability(Integer)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetProbability(Integer)
   type: Method
-  summary: "\nThe numeric probability of the sale\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProbability(Integer probability)
     parameters:
     - id: probability
       type: CRMScript.Global.Integer
-      description: 
+      description: The numeric probability of the sale
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSSaleStageEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSSaleStageEntity.SetSaleStageId(Integer)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetSaleStageId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSaleStageId(Integer saleStageId)
     parameters:
     - id: saleStageId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSSaleStageEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSSaleStageEntity.SetValue(String)
   fullName: CRMScript.NetServer.NSSaleStageEntity.SetValue(String)
   type: Method
-  summary: "\nThe sale stage\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(String value)
     parameters:
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: The sale stage
     return:
       type: CRMScript.Global.Void
   example: 
