--- a/docs/api-reference/CRMScript.NetServer.NSSmtpTestResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmtpTestResult.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSSmtpTestResult.#ctor
   - CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
   - CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
-  - CRMScript.NetServer.NSSmtpTestResult.#ctor
   - CRMScript.NetServer.NSSmtpTestResult.SetErrorMessage(String)
   - CRMScript.NetServer.NSSmtpTestResult.SetSuccess(Bool)
   name: NSSmtpTestResult
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
-  commentId: M:CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
-  id: 'GetErrorMessage()'
-  so.intellisense: NSSmtpTestResult.GetErrorMessage
-  langs:
-  - crmscript
-  name: 'GetErrorMessage()'
-  nameWithType: NSSmtpTestResult.GetErrorMessage()
-  fullName: CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
-  type: Method
-  summary: "\nIf an error occurred, this member will contain a description of the error\n"
-  remarks: 
-  syntax: 
-    content: String GetErrorMessage()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSmtpTestResult thing;\nString errorMessage = thing.GetErrorMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
-  commentId: M:CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
-  id: 'GetSuccess()'
-  so.intellisense: NSSmtpTestResult.GetSuccess
-  langs:
-  - crmscript
-  name: 'GetSuccess()'
-  nameWithType: NSSmtpTestResult.GetSuccess()
-  fullName: CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
-  type: Method
-  summary: "\nTrue if the test went ok. False if it failed. See the error message for details\n"
-  remarks: 
-  syntax: 
-    content: Bool GetSuccess()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSSmtpTestResult thing;\nBool success = thing.GetSuccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmtpTestResult.#ctor
   commentId: M:CRMScript.NetServer.NSSmtpTestResult.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSSmtpTestResult
   example: 
+- uid: CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
+  commentId: M:CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
+  id: 'GetErrorMessage()'
+  so.intellisense: NSSmtpTestResult.GetErrorMessage
+  langs:
+  - crmscript
+  name: 'GetErrorMessage()'
+  nameWithType: NSSmtpTestResult.GetErrorMessage()
+  fullName: CRMScript.NetServer.NSSmtpTestResult.GetErrorMessage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetErrorMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: If an error occurred, this member will contain a description of the error
+  example: 
+  - "\n<pre><code>NSSmtpTestResult thing;\nString errorMessage = thing.GetErrorMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
+  commentId: M:CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
+  id: 'GetSuccess()'
+  so.intellisense: NSSmtpTestResult.GetSuccess
+  langs:
+  - crmscript
+  name: 'GetSuccess()'
+  nameWithType: NSSmtpTestResult.GetSuccess()
+  fullName: CRMScript.NetServer.NSSmtpTestResult.GetSuccess()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetSuccess()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if the test went ok. False if it failed. See the error message for details
+  example: 
+  - "\n<pre><code>NSSmtpTestResult thing;\nBool success = thing.GetSuccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmtpTestResult.SetErrorMessage(String)
   commentId: M:CRMScript.NetServer.NSSmtpTestResult.SetErrorMessage(String)
   id: 'SetErrorMessage(String)'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSSmtpTestResult.SetErrorMessage(String)
   fullName: CRMScript.NetServer.NSSmtpTestResult.SetErrorMessage(String)
   type: Method
-  summary: "\nIf an error occurred, this member will contain a description of the error\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetErrorMessage(String errorMessage)
     parameters:
     - id: errorMessage
       type: CRMScript.Global.String
-      description: 
+      description: If an error occurred, this member will contain a description of the error
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSSmtpTestResult.SetSuccess(Bool)
   fullName: CRMScript.NetServer.NSSmtpTestResult.SetSuccess(Bool)
   type: Method
-  summary: "\nTrue if the test went ok. False if it failed. See the error message for details\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSuccess(Bool success)
     parameters:
     - id: success
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the test went ok. False if it failed. See the error message for details
     return:
       type: CRMScript.Global.Void
   example: 
