--- a/docs/api-reference/CRMScript.NetServer.NSStatusMonitorPeriods.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatusMonitorPeriods.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   - CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
   - CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
   - CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
-  - CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   - CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod1(Integer)
   - CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod2(Integer)
   - CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod3(Integer)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
-  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
-  id: 'GetPeriod1()'
-  so.intellisense: NSStatusMonitorPeriods.GetPeriod1
-  langs:
-  - crmscript
-  name: 'GetPeriod1()'
-  nameWithType: NSStatusMonitorPeriods.GetPeriod1()
-  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
-  type: Method
-  summary: "\nDays in the first period\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPeriod1()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period1 = thing.GetPeriod1();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
-  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
-  id: 'GetPeriod2()'
-  so.intellisense: NSStatusMonitorPeriods.GetPeriod2
-  langs:
-  - crmscript
-  name: 'GetPeriod2()'
-  nameWithType: NSStatusMonitorPeriods.GetPeriod2()
-  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
-  type: Method
-  summary: "\nDays in the second period\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPeriod2()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period2 = thing.GetPeriod2();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
-  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
-  id: 'GetPeriod3()'
-  so.intellisense: NSStatusMonitorPeriods.GetPeriod3
-  langs:
-  - crmscript
-  name: 'GetPeriod3()'
-  nameWithType: NSStatusMonitorPeriods.GetPeriod3()
-  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
-  type: Method
-  summary: "\nDays in the third period\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPeriod3()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period3 = thing.GetPeriod3();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSStatusMonitorPeriods
   example: 
+- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
+  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
+  id: 'GetPeriod1()'
+  so.intellisense: NSStatusMonitorPeriods.GetPeriod1
+  langs:
+  - crmscript
+  name: 'GetPeriod1()'
+  nameWithType: NSStatusMonitorPeriods.GetPeriod1()
+  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod1()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPeriod1()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Days in the first period
+  example: 
+  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period1 = thing.GetPeriod1();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
+  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
+  id: 'GetPeriod2()'
+  so.intellisense: NSStatusMonitorPeriods.GetPeriod2
+  langs:
+  - crmscript
+  name: 'GetPeriod2()'
+  nameWithType: NSStatusMonitorPeriods.GetPeriod2()
+  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod2()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPeriod2()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Days in the second period
+  example: 
+  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period2 = thing.GetPeriod2();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
+  commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
+  id: 'GetPeriod3()'
+  so.intellisense: NSStatusMonitorPeriods.GetPeriod3
+  langs:
+  - crmscript
+  name: 'GetPeriod3()'
+  nameWithType: NSStatusMonitorPeriods.GetPeriod3()
+  fullName: CRMScript.NetServer.NSStatusMonitorPeriods.GetPeriod3()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPeriod3()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Days in the third period
+  example: 
+  - "\n<pre><code>NSStatusMonitorPeriods thing;\nInteger period3 = thing.GetPeriod3();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod1(Integer)
   commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod1(Integer)
   id: 'SetPeriod1(Integer)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSStatusMonitorPeriods.SetPeriod1(Integer)
   fullName: CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod1(Integer)
   type: Method
-  summary: "\nDays in the first period\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPeriod1(Integer period1)
     parameters:
     - id: period1
       type: CRMScript.Global.Integer
-      description: 
+      description: Days in the first period
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,14 +126,14 @@ items:
   nameWithType: NSStatusMonitorPeriods.SetPeriod2(Integer)
   fullName: CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod2(Integer)
   type: Method
-  summary: "\nDays in the second period\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPeriod2(Integer period2)
     parameters:
     - id: period2
       type: CRMScript.Global.Integer
-      description: 
+      description: Days in the second period
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSStatusMonitorPeriods.SetPeriod3(Integer)
   fullName: CRMScript.NetServer.NSStatusMonitorPeriods.SetPeriod3(Integer)
   type: Method
-  summary: "\nDays in the third period\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPeriod3(Integer period3)
     parameters:
     - id: period3
       type: CRMScript.Global.Integer
-      description: 
+      description: Days in the third period
     return:
       type: CRMScript.Global.Void
   example: 
