--- a/docs/api-reference/CRMScript.NetServer.NSStream.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStream.yml
@@ -6,32 +6,14 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSStream.GetStream()
   - CRMScript.NetServer.NSStream.#ctor
+  - CRMScript.NetServer.NSStream.GetStream()
   - CRMScript.NetServer.NSStream.SetStream(Byte[])
   name: NSStream
   nameWithType: NSStream
   fullName: CRMScript.NetServer.NSStream
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSStream.GetStream()
-  commentId: M:CRMScript.NetServer.NSStream.GetStream()
-  id: 'GetStream()'
-  so.intellisense: NSStream.GetStream
-  langs:
-  - crmscript
-  name: 'GetStream()'
-  nameWithType: NSStream.GetStream()
-  fullName: CRMScript.NetServer.NSStream.GetStream()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetStream()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSStream.#ctor
   commentId: M:CRMScript.NetServer.NSStream.#ctor
@@ -48,6 +30,24 @@ items:
   syntax: 
     content: NSStream
   example: 
+- uid: CRMScript.NetServer.NSStream.GetStream()
+  commentId: M:CRMScript.NetServer.NSStream.GetStream()
+  id: 'GetStream()'
+  so.intellisense: NSStream.GetStream
+  langs:
+  - crmscript
+  name: 'GetStream()'
+  nameWithType: NSStream.GetStream()
+  fullName: CRMScript.NetServer.NSStream.GetStream()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Byte[]GetStream()
+    parameters: []
+    return:
+      type: CRMScript.Global.Byte[]
+  example: 
 - uid: CRMScript.NetServer.NSStream.SetStream(Byte[])
   commentId: M:CRMScript.NetServer.NSStream.SetStream(Byte[])
   id: 'SetStream(Byte[])'
@@ -61,9 +61,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetStream(Byte[] p_0)
+    content: Void SetStream(Byte[] stream)
     parameters:
-    - id: p_0
+    - id: stream
       type: CRMScript.Global.Byte[]
       description: 
     return:
