--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   - CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
   - CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
   - CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
@@ -14,7 +15,6 @@ items:
   - CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
   - CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
   - CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
-  - CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   - CRMScript.NetServer.NSSaleTypeStageLink.SetProbability(Integer)
   - CRMScript.NetServer.NSSaleTypeStageLink.SetProbId(Integer)
   - CRMScript.NetServer.NSSaleTypeStageLink.SetProbName(String)
@@ -28,150 +28,6 @@ items:
   fullName: CRMScript.NetServer.NSSaleTypeStageLink
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
-  id: 'GetProbability()'
-  so.intellisense: NSSaleTypeStageLink.GetProbability
-  langs:
-  - crmscript
-  name: 'GetProbability()'
-  nameWithType: NSSaleTypeStageLink.GetProbability()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProbability()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
-  id: 'GetProbId()'
-  so.intellisense: NSSaleTypeStageLink.GetProbId
-  langs:
-  - crmscript
-  name: 'GetProbId()'
-  nameWithType: NSSaleTypeStageLink.GetProbId()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProbId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
-  id: 'GetProbName()'
-  so.intellisense: NSSaleTypeStageLink.GetProbName
-  langs:
-  - crmscript
-  name: 'GetProbName()'
-  nameWithType: NSSaleTypeStageLink.GetProbName()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProbName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
-  id: 'GetProbTooltip()'
-  so.intellisense: NSSaleTypeStageLink.GetProbTooltip
-  langs:
-  - crmscript
-  name: 'GetProbTooltip()'
-  nameWithType: NSSaleTypeStageLink.GetProbTooltip()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProbTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
-  id: 'GetSaleTypeId()'
-  so.intellisense: NSSaleTypeStageLink.GetSaleTypeId
-  langs:
-  - crmscript
-  name: 'GetSaleTypeId()'
-  nameWithType: NSSaleTypeStageLink.GetSaleTypeId()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetSaleTypeId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
-  id: 'GetSaleTypeName()'
-  so.intellisense: NSSaleTypeStageLink.GetSaleTypeName
-  langs:
-  - crmscript
-  name: 'GetSaleTypeName()'
-  nameWithType: NSSaleTypeStageLink.GetSaleTypeName()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetSaleTypeName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
-  id: 'GetSaleTypeStageLinkId()'
-  so.intellisense: NSSaleTypeStageLink.GetSaleTypeStageLinkId
-  langs:
-  - crmscript
-  name: 'GetSaleTypeStageLinkId()'
-  nameWithType: NSSaleTypeStageLink.GetSaleTypeStageLinkId()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetSaleTypeStageLinkId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
-  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
-  id: 'GetSaleTypeTooltip()'
-  so.intellisense: NSSaleTypeStageLink.GetSaleTypeTooltip
-  langs:
-  - crmscript
-  name: 'GetSaleTypeTooltip()'
-  nameWithType: NSSaleTypeStageLink.GetSaleTypeTooltip()
-  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetSaleTypeTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.#ctor
@@ -188,6 +44,150 @@ items:
   syntax: 
     content: NSSaleTypeStageLink
   example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
+  id: 'GetProbability()'
+  so.intellisense: NSSaleTypeStageLink.GetProbability
+  langs:
+  - crmscript
+  name: 'GetProbability()'
+  nameWithType: NSSaleTypeStageLink.GetProbability()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetProbability()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
+  id: 'GetProbId()'
+  so.intellisense: NSSaleTypeStageLink.GetProbId
+  langs:
+  - crmscript
+  name: 'GetProbId()'
+  nameWithType: NSSaleTypeStageLink.GetProbId()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetProbId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
+  id: 'GetProbName()'
+  so.intellisense: NSSaleTypeStageLink.GetProbName
+  langs:
+  - crmscript
+  name: 'GetProbName()'
+  nameWithType: NSSaleTypeStageLink.GetProbName()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProbName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
+  id: 'GetProbTooltip()'
+  so.intellisense: NSSaleTypeStageLink.GetProbTooltip
+  langs:
+  - crmscript
+  name: 'GetProbTooltip()'
+  nameWithType: NSSaleTypeStageLink.GetProbTooltip()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProbTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
+  id: 'GetSaleTypeId()'
+  so.intellisense: NSSaleTypeStageLink.GetSaleTypeId
+  langs:
+  - crmscript
+  name: 'GetSaleTypeId()'
+  nameWithType: NSSaleTypeStageLink.GetSaleTypeId()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetSaleTypeId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
+  id: 'GetSaleTypeName()'
+  so.intellisense: NSSaleTypeStageLink.GetSaleTypeName
+  langs:
+  - crmscript
+  name: 'GetSaleTypeName()'
+  nameWithType: NSSaleTypeStageLink.GetSaleTypeName()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetSaleTypeName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
+  id: 'GetSaleTypeStageLinkId()'
+  so.intellisense: NSSaleTypeStageLink.GetSaleTypeStageLinkId
+  langs:
+  - crmscript
+  name: 'GetSaleTypeStageLinkId()'
+  nameWithType: NSSaleTypeStageLink.GetSaleTypeStageLinkId()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetSaleTypeStageLinkId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
+  commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
+  id: 'GetSaleTypeTooltip()'
+  so.intellisense: NSSaleTypeStageLink.GetSaleTypeTooltip
+  langs:
+  - crmscript
+  name: 'GetSaleTypeTooltip()'
+  nameWithType: NSSaleTypeStageLink.GetSaleTypeTooltip()
+  fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetSaleTypeTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.SetProbability(Integer)
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.SetProbability(Integer)
   id: 'SetProbability(Integer)'
@@ -201,9 +201,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProbability(Integer p_0)
+    content: Void SetProbability(Integer prob)
     parameters:
-    - id: p_0
+    - id: prob
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -222,9 +222,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProbId(Integer p_0)
+    content: Void SetProbId(Integer id)
     parameters:
-    - id: p_0
+    - id: id
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -243,9 +243,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProbName(String p_0)
+    content: Void SetProbName(String name)
     parameters:
-    - id: p_0
+    - id: name
       type: CRMScript.Global.String
       description: 
     return:
@@ -264,9 +264,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProbTooltip(String p_0)
+    content: Void SetProbTooltip(String tooltip)
     parameters:
-    - id: p_0
+    - id: tooltip
       type: CRMScript.Global.String
       description: 
     return:
@@ -285,9 +285,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetSaleTypeId(Integer p_0)
+    content: Void SetSaleTypeId(Integer typeId)
     parameters:
-    - id: p_0
+    - id: typeId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -306,9 +306,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetSaleTypeName(String p_0)
+    content: Void SetSaleTypeName(String typeName)
     parameters:
-    - id: p_0
+    - id: typeName
       type: CRMScript.Global.String
       description: 
     return:
@@ -327,9 +327,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetSaleTypeStageLinkId(Integer p_0)
+    content: Void SetSaleTypeStageLinkId(Integer linkId)
     parameters:
-    - id: p_0
+    - id: linkId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -348,9 +348,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetSaleTypeTooltip(String p_0)
+    content: Void SetSaleTypeTooltip(String tooltip)
     parameters:
-    - id: p_0
+    - id: tooltip
       type: CRMScript.Global.String
       description: 
     return:
