--- a/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSSelectionForFind.#ctor
   - CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
   - CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
   - CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
   - CRMScript.NetServer.NSSelectionForFind.GetProviderName()
   - CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
   - CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
-  - CRMScript.NetServer.NSSelectionForFind.#ctor
   - CRMScript.NetServer.NSSelectionForFind.SetCanSaveAsSelection(Bool)
   - CRMScript.NetServer.NSSelectionForFind.SetFilterScreenHeading(String)
   - CRMScript.NetServer.NSSelectionForFind.SetMainHeading(String)
@@ -25,126 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
-  id: 'GetCanSaveAsSelection()'
-  so.intellisense: NSSelectionForFind.GetCanSaveAsSelection
-  langs:
-  - crmscript
-  name: 'GetCanSaveAsSelection()'
-  nameWithType: NSSelectionForFind.GetCanSaveAsSelection()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
-  type: Method
-  summary: "\nMost Find entities support saving the search as a Dynamic Selection: this bool indicates if that is the case\n"
-  remarks: 
-  syntax: 
-    content: Bool GetCanSaveAsSelection()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nBool canSaveAsSelection = thing.GetCanSaveAsSelection();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
-  id: 'GetFilterScreenHeading()'
-  so.intellisense: NSSelectionForFind.GetFilterScreenHeading
-  langs:
-  - crmscript
-  name: 'GetFilterScreenHeading()'
-  nameWithType: NSSelectionForFind.GetFilterScreenHeading()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
-  type: Method
-  summary: "\n'Find sale', or whatever is appropriate for the Find<entity>filter page; this string will contain resource references\n"
-  remarks: 
-  syntax: 
-    content: String GetFilterScreenHeading()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nString filterScreenHeading = thing.GetFilterScreenHeading();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
-  id: 'GetMainHeading()'
-  so.intellisense: NSSelectionForFind.GetMainHeading
-  langs:
-  - crmscript
-  name: 'GetMainHeading()'
-  nameWithType: NSSelectionForFind.GetMainHeading()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
-  type: Method
-  summary: "\n'Sale', intended for the main headings in the Find front page; this string will contain resource references\n"
-  remarks: 
-  syntax: 
-    content: String GetMainHeading()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nString mainHeading = thing.GetMainHeading();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSelectionForFind.GetProviderName()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetProviderName()
-  id: 'GetProviderName()'
-  so.intellisense: NSSelectionForFind.GetProviderName
-  langs:
-  - crmscript
-  name: 'GetProviderName()'
-  nameWithType: NSSelectionForFind.GetProviderName()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetProviderName()
-  type: Method
-  summary: "\nThe name of the Archive Provider to use when working with this selection; this is the main entity provider, never Shadow, Combined or anything else fancy\n"
-  remarks: 
-  syntax: 
-    content: String GetProviderName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nString providerName = thing.GetProviderName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
-  id: 'GetSelectionEntityHeading()'
-  so.intellisense: NSSelectionForFind.GetSelectionEntityHeading
-  langs:
-  - crmscript
-  name: 'GetSelectionEntityHeading()'
-  nameWithType: NSSelectionForFind.GetSelectionEntityHeading()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
-  type: Method
-  summary: "\n'Companies', or whatever else is appropriate* the plural form of the entity name, intended for the Selection.Details tab before it is saved (!!); this string will contain resource references\n"
-  remarks: 
-  syntax: 
-    content: String GetSelectionEntityHeading()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nString selectionEntityHeading = thing.GetSelectionEntityHeading();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
-  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
-  id: 'GetSelectionId()'
-  so.intellisense: NSSelectionForFind.GetSelectionId
-  langs:
-  - crmscript
-  name: 'GetSelectionId()'
-  nameWithType: NSSelectionForFind.GetSelectionId()
-  fullName: CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetSelectionId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSelectionForFind thing;\nInteger selectionId = thing.GetSelectionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionForFind.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionForFind.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSSelectionForFind
   example: 
+- uid: CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
+  id: 'GetCanSaveAsSelection()'
+  so.intellisense: NSSelectionForFind.GetCanSaveAsSelection
+  langs:
+  - crmscript
+  name: 'GetCanSaveAsSelection()'
+  nameWithType: NSSelectionForFind.GetCanSaveAsSelection()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetCanSaveAsSelection()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetCanSaveAsSelection()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Most Find entities support saving the search as a Dynamic Selection. This bool indicates if that is the case
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nBool canSaveAsSelection = thing.GetCanSaveAsSelection();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
+  id: 'GetFilterScreenHeading()'
+  so.intellisense: NSSelectionForFind.GetFilterScreenHeading
+  langs:
+  - crmscript
+  name: 'GetFilterScreenHeading()'
+  nameWithType: NSSelectionForFind.GetFilterScreenHeading()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetFilterScreenHeading()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetFilterScreenHeading()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: "'Find sale', or whatever is appropriate for the Find<entity>filter page; this string will contain resource references"
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nString filterScreenHeading = thing.GetFilterScreenHeading();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
+  id: 'GetMainHeading()'
+  so.intellisense: NSSelectionForFind.GetMainHeading
+  langs:
+  - crmscript
+  name: 'GetMainHeading()'
+  nameWithType: NSSelectionForFind.GetMainHeading()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetMainHeading()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetMainHeading()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: "'Sale', intended for the main headings in the Find front page; this string will contain resource references"
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nString mainHeading = thing.GetMainHeading();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSelectionForFind.GetProviderName()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetProviderName()
+  id: 'GetProviderName()'
+  so.intellisense: NSSelectionForFind.GetProviderName
+  langs:
+  - crmscript
+  name: 'GetProviderName()'
+  nameWithType: NSSelectionForFind.GetProviderName()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetProviderName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetProviderName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the Archive Provider to use when working with this selection; this is the main entity provider, never Shadow, Combined or anything else fancy
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nString providerName = thing.GetProviderName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
+  id: 'GetSelectionEntityHeading()'
+  so.intellisense: NSSelectionForFind.GetSelectionEntityHeading
+  langs:
+  - crmscript
+  name: 'GetSelectionEntityHeading()'
+  nameWithType: NSSelectionForFind.GetSelectionEntityHeading()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetSelectionEntityHeading()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetSelectionEntityHeading()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: "'Companies', or whatever else is appropriate* the plural form of the entity name, intended for the Selection.Details tab before it is saved (!!); this string will contain resource references"
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nString selectionEntityHeading = thing.GetSelectionEntityHeading();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
+  commentId: M:CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
+  id: 'GetSelectionId()'
+  so.intellisense: NSSelectionForFind.GetSelectionId
+  langs:
+  - crmscript
+  name: 'GetSelectionId()'
+  nameWithType: NSSelectionForFind.GetSelectionId()
+  fullName: CRMScript.NetServer.NSSelectionForFind.GetSelectionId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetSelectionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSSelectionForFind thing;\nInteger selectionId = thing.GetSelectionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionForFind.SetCanSaveAsSelection(Bool)
   commentId: M:CRMScript.NetServer.NSSelectionForFind.SetCanSaveAsSelection(Bool)
   id: 'SetCanSaveAsSelection(Bool)'
@@ -170,14 +170,14 @@ items:
   nameWithType: NSSelectionForFind.SetCanSaveAsSelection(Bool)
   fullName: CRMScript.NetServer.NSSelectionForFind.SetCanSaveAsSelection(Bool)
   type: Method
-  summary: "\nMost Find entities support saving the search as a Dynamic Selection: this bool indicates if that is the case\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCanSaveAsSelection(Bool canSaveAsSelection)
     parameters:
     - id: canSaveAsSelection
       type: CRMScript.Global.Bool
-      description: 
+      description:  Most Find entities support saving the search as a Dynamic Selection this bool indicates if that is the case
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSSelectionForFind.SetMainHeading(String)
   fullName: CRMScript.NetServer.NSSelectionForFind.SetMainHeading(String)
   type: Method
-  summary: "\n'Sale', intended for the main headings in the Find front page; this string will contain resource references\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMainHeading(String mainHeading)
     parameters:
     - id: mainHeading
       type: CRMScript.Global.String
-      description: 
+      description: "'Sale', intended for the main headings in the Find front page; this string will contain resource references"
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSSelectionForFind.SetProviderName(String)
   fullName: CRMScript.NetServer.NSSelectionForFind.SetProviderName(String)
   type: Method
-  summary: "\nThe name of the Archive Provider to use when working with this selection; this is the main entity provider, never Shadow, Combined or anything else fancy\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProviderName(String providerName)
     parameters:
     - id: providerName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the Archive Provider to use when working with this selection; this is the main entity provider, never Shadow, Combined or anything else fancy
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSSelectionForFind.SetSelectionEntityHeading(String)
   fullName: CRMScript.NetServer.NSSelectionForFind.SetSelectionEntityHeading(String)
   type: Method
-  summary: "\n'Companies', or whatever else is appropriate* the plural form of the entity name, intended for the Selection.Details tab before it is saved (!!); this string will contain resource references\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSelectionEntityHeading(String selectionEntityHeading)
     parameters:
     - id: selectionEntityHeading
       type: CRMScript.Global.String
-      description: 
+      description: "'Companies', or whatever else is appropriate* the plural form of the entity name, intended for the Selection.Details tab before it is saved (!!); this string will contain resource references"
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSSelectionForFind.SetSelectionId(Integer)
   fullName: CRMScript.NetServer.NSSelectionForFind.SetSelectionId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSelectionId(Integer selectionId)
     parameters:
     - id: selectionId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
