--- a/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSSentiment.#ctor
   - CRMScript.NetServer.NSSentiment.GetConfidence()
   - CRMScript.NetServer.NSSentiment.GetScore()
-  - CRMScript.NetServer.NSSentiment.#ctor
   - CRMScript.NetServer.NSSentiment.SetConfidence(Integer)
   - CRMScript.NetServer.NSSentiment.SetScore(Integer)
   name: NSSentiment
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSSentiment.GetConfidence()
-  commentId: M:CRMScript.NetServer.NSSentiment.GetConfidence()
-  id: 'GetConfidence()'
-  so.intellisense: NSSentiment.GetConfidence
-  langs:
-  - crmscript
-  name: 'GetConfidence()'
-  nameWithType: NSSentiment.GetConfidence()
-  fullName: CRMScript.NetServer.NSSentiment.GetConfidence()
-  type: Method
-  summary: "\nSentiment analysis confidence, where available. 0 = no idea, 100 = perfectly confident, -1 = no confidence score available\n"
-  remarks: 
-  syntax: 
-    content: Integer GetConfidence()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSentiment thing;\nInteger confidence = thing.GetConfidence();</code></pre>\n"
-- uid: CRMScript.NetServer.NSSentiment.GetScore()
-  commentId: M:CRMScript.NetServer.NSSentiment.GetScore()
-  id: 'GetScore()'
-  so.intellisense: NSSentiment.GetScore
-  langs:
-  - crmscript
-  name: 'GetScore()'
-  nameWithType: NSSentiment.GetScore()
-  fullName: CRMScript.NetServer.NSSentiment.GetScore()
-  type: Method
-  summary: "\nSentiment score, -100 = very unhappy, 100 = very happy, 0 = no idea (not recognized)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetScore()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSSentiment thing;\nInteger score = thing.GetScore();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSentiment.#ctor
   commentId: M:CRMScript.NetServer.NSSentiment.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSSentiment
   example: 
+- uid: CRMScript.NetServer.NSSentiment.GetConfidence()
+  commentId: M:CRMScript.NetServer.NSSentiment.GetConfidence()
+  id: 'GetConfidence()'
+  so.intellisense: NSSentiment.GetConfidence
+  langs:
+  - crmscript
+  name: 'GetConfidence()'
+  nameWithType: NSSentiment.GetConfidence()
+  fullName: CRMScript.NetServer.NSSentiment.GetConfidence()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetConfidence()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Sentiment analysis confidence, where available. 0 = no idea, 100 = perfectly confident, -1 = no confidence score available
+  example: 
+  - "\n<pre><code>NSSentiment thing;\nInteger confidence = thing.GetConfidence();</code></pre>\n"
+- uid: CRMScript.NetServer.NSSentiment.GetScore()
+  commentId: M:CRMScript.NetServer.NSSentiment.GetScore()
+  id: 'GetScore()'
+  so.intellisense: NSSentiment.GetScore
+  langs:
+  - crmscript
+  name: 'GetScore()'
+  nameWithType: NSSentiment.GetScore()
+  fullName: CRMScript.NetServer.NSSentiment.GetScore()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetScore()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Sentiment score, -100 = very unhappy, 100 = very happy, 0 = no idea (not recognized)
+  example: 
+  - "\n<pre><code>NSSentiment thing;\nInteger score = thing.GetScore();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSentiment.SetConfidence(Integer)
   commentId: M:CRMScript.NetServer.NSSentiment.SetConfidence(Integer)
   id: 'SetConfidence(Integer)'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSSentiment.SetConfidence(Integer)
   fullName: CRMScript.NetServer.NSSentiment.SetConfidence(Integer)
   type: Method
-  summary: "\nSentiment analysis confidence, where available. 0 = no idea, 100 = perfectly confident, -1 = no confidence score available\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetConfidence(Integer confidence)
     parameters:
     - id: confidence
       type: CRMScript.Global.Integer
-      description: 
+      description:  Sentiment analysis confidence, where available. 0 = no idea, 100 = perfectly confident, -1 = no confidence score available
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSSentiment.SetScore(Integer)
   fullName: CRMScript.NetServer.NSSentiment.SetScore(Integer)
   type: Method
-  summary: "\nSentiment score, -100 = very unhappy, 100 = very happy, 0 = no idea (not recognized)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetScore(Integer score)
     parameters:
     - id: score
       type: CRMScript.Global.Integer
-      description: 
+      description:  Sentiment score, -100 = very unhappy, 100 = very happy, 0 = no idea (not recognized)
     return:
       type: CRMScript.Global.Void
   example: 
