--- a/docs/api-reference/CRMScript.NetServer.NSServiceAuth.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSServiceAuth.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSServiceAuth.#ctor
   - CRMScript.NetServer.NSServiceAuth.GetAuthType()
   - CRMScript.NetServer.NSServiceAuth.GetPassword()
   - CRMScript.NetServer.NSServiceAuth.GetPort()
   - CRMScript.NetServer.NSServiceAuth.GetServer()
   - CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
   - CRMScript.NetServer.NSServiceAuth.GetUsername()
-  - CRMScript.NetServer.NSServiceAuth.#ctor
   - CRMScript.NetServer.NSServiceAuth.SetAuthType(String)
   - CRMScript.NetServer.NSServiceAuth.SetPassword(String)
   - CRMScript.NetServer.NSServiceAuth.SetPort(Integer)
@@ -25,126 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSServiceAuth.GetAuthType()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetAuthType()
-  id: 'GetAuthType()'
-  so.intellisense: NSServiceAuth.GetAuthType
-  langs:
-  - crmscript
-  name: 'GetAuthType()'
-  nameWithType: NSServiceAuth.GetAuthType()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetAuthType()
-  type: Method
-  summary: "\nThe type of authentication, plain-text, OAuth...\n"
-  remarks: 
-  syntax: 
-    content: String GetAuthType()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nString authType = thing.GetAuthType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSServiceAuth.GetPassword()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetPassword()
-  id: 'GetPassword()'
-  so.intellisense: NSServiceAuth.GetPassword
-  langs:
-  - crmscript
-  name: 'GetPassword()'
-  nameWithType: NSServiceAuth.GetPassword()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetPassword()
-  type: Method
-  summary: "\nThe (decrypted) password or token\n"
-  remarks: 
-  syntax: 
-    content: String GetPassword()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nString password = thing.GetPassword();</code></pre>\n"
-- uid: CRMScript.NetServer.NSServiceAuth.GetPort()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetPort()
-  id: 'GetPort()'
-  so.intellisense: NSServiceAuth.GetPort
-  langs:
-  - crmscript
-  name: 'GetPort()'
-  nameWithType: NSServiceAuth.GetPort()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetPort()
-  type: Method
-  summary: "\nThe server port\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPort()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nInteger port = thing.GetPort();</code></pre>\n"
-- uid: CRMScript.NetServer.NSServiceAuth.GetServer()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetServer()
-  id: 'GetServer()'
-  so.intellisense: NSServiceAuth.GetServer
-  langs:
-  - crmscript
-  name: 'GetServer()'
-  nameWithType: NSServiceAuth.GetServer()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetServer()
-  type: Method
-  summary: "\nThe mail server\n"
-  remarks: 
-  syntax: 
-    content: String GetServer()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nString server = thing.GetServer();</code></pre>\n"
-- uid: CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
-  id: 'GetServiceAuthId()'
-  so.intellisense: NSServiceAuth.GetServiceAuthId
-  langs:
-  - crmscript
-  name: 'GetServiceAuthId()'
-  nameWithType: NSServiceAuth.GetServiceAuthId()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
-  type: Method
-  summary: "\nThe primary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetServiceAuthId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nInteger serviceAuthId = thing.GetServiceAuthId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSServiceAuth.GetUsername()
-  commentId: M:CRMScript.NetServer.NSServiceAuth.GetUsername()
-  id: 'GetUsername()'
-  so.intellisense: NSServiceAuth.GetUsername
-  langs:
-  - crmscript
-  name: 'GetUsername()'
-  nameWithType: NSServiceAuth.GetUsername()
-  fullName: CRMScript.NetServer.NSServiceAuth.GetUsername()
-  type: Method
-  summary: "\nThe username\n"
-  remarks: 
-  syntax: 
-    content: String GetUsername()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSServiceAuth thing;\nString username = thing.GetUsername();</code></pre>\n"
 - uid: CRMScript.NetServer.NSServiceAuth.#ctor
   commentId: M:CRMScript.NetServer.NSServiceAuth.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSServiceAuth
   example: 
+- uid: CRMScript.NetServer.NSServiceAuth.GetAuthType()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetAuthType()
+  id: 'GetAuthType()'
+  so.intellisense: NSServiceAuth.GetAuthType
+  langs:
+  - crmscript
+  name: 'GetAuthType()'
+  nameWithType: NSServiceAuth.GetAuthType()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetAuthType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetAuthType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The type of authentication, plain-text, OAuth...
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nString authType = thing.GetAuthType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSServiceAuth.GetPassword()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetPassword()
+  id: 'GetPassword()'
+  so.intellisense: NSServiceAuth.GetPassword
+  langs:
+  - crmscript
+  name: 'GetPassword()'
+  nameWithType: NSServiceAuth.GetPassword()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetPassword()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetPassword()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The (decrypted) password or token
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nString password = thing.GetPassword();</code></pre>\n"
+- uid: CRMScript.NetServer.NSServiceAuth.GetPort()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetPort()
+  id: 'GetPort()'
+  so.intellisense: NSServiceAuth.GetPort
+  langs:
+  - crmscript
+  name: 'GetPort()'
+  nameWithType: NSServiceAuth.GetPort()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetPort()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPort()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The server port
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nInteger port = thing.GetPort();</code></pre>\n"
+- uid: CRMScript.NetServer.NSServiceAuth.GetServer()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetServer()
+  id: 'GetServer()'
+  so.intellisense: NSServiceAuth.GetServer
+  langs:
+  - crmscript
+  name: 'GetServer()'
+  nameWithType: NSServiceAuth.GetServer()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetServer()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetServer()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The mail server
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nString server = thing.GetServer();</code></pre>\n"
+- uid: CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
+  id: 'GetServiceAuthId()'
+  so.intellisense: NSServiceAuth.GetServiceAuthId
+  langs:
+  - crmscript
+  name: 'GetServiceAuthId()'
+  nameWithType: NSServiceAuth.GetServiceAuthId()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetServiceAuthId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetServiceAuthId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nInteger serviceAuthId = thing.GetServiceAuthId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSServiceAuth.GetUsername()
+  commentId: M:CRMScript.NetServer.NSServiceAuth.GetUsername()
+  id: 'GetUsername()'
+  so.intellisense: NSServiceAuth.GetUsername
+  langs:
+  - crmscript
+  name: 'GetUsername()'
+  nameWithType: NSServiceAuth.GetUsername()
+  fullName: CRMScript.NetServer.NSServiceAuth.GetUsername()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetUsername()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The username
+  example: 
+  - "\n<pre><code>NSServiceAuth thing;\nString username = thing.GetUsername();</code></pre>\n"
 - uid: CRMScript.NetServer.NSServiceAuth.SetAuthType(String)
   commentId: M:CRMScript.NetServer.NSServiceAuth.SetAuthType(String)
   id: 'SetAuthType(String)'
@@ -170,14 +170,14 @@ items:
   nameWithType: NSServiceAuth.SetAuthType(String)
   fullName: CRMScript.NetServer.NSServiceAuth.SetAuthType(String)
   type: Method
-  summary: "\nThe type of authentication, plain-text, OAuth...\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAuthType(String authType)
     parameters:
     - id: authType
       type: CRMScript.Global.String
-      description: 
+      description: The type of authentication, plain-text, OAuth...
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSServiceAuth.SetPassword(String)
   fullName: CRMScript.NetServer.NSServiceAuth.SetPassword(String)
   type: Method
-  summary: "\nThe (decrypted) password or token\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPassword(String password)
     parameters:
     - id: password
       type: CRMScript.Global.String
-      description: 
+      description:  The (decrypted) password or token
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSServiceAuth.SetPort(Integer)
   fullName: CRMScript.NetServer.NSServiceAuth.SetPort(Integer)
   type: Method
-  summary: "\nThe server port\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPort(Integer port)
     parameters:
     - id: port
       type: CRMScript.Global.Integer
-      description: 
+      description: The server port
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSServiceAuth.SetServer(String)
   fullName: CRMScript.NetServer.NSServiceAuth.SetServer(String)
   type: Method
-  summary: "\nThe mail server\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetServer(String server)
     parameters:
     - id: server
       type: CRMScript.Global.String
-      description: 
+      description: The mail server
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSServiceAuth.SetServiceAuthId(Integer)
   fullName: CRMScript.NetServer.NSServiceAuth.SetServiceAuthId(Integer)
   type: Method
-  summary: "\nThe primary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetServiceAuthId(Integer serviceAuthId)
     parameters:
     - id: serviceAuthId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSServiceAuth.SetUsername(String)
   fullName: CRMScript.NetServer.NSServiceAuth.SetUsername(String)
   type: Method
-  summary: "\nThe username\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUsername(String username)
     parameters:
     - id: username
       type: CRMScript.Global.String
-      description: 
+      description: The username
     return:
       type: CRMScript.Global.Void
   example: 
