--- a/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
@@ -6,78 +6,19 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSStatisticsDataSet.#ctor
   - CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
   - CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
   - CRMScript.NetServer.NSStatisticsDataSet.GetValues()
-  - CRMScript.NetServer.NSStatisticsDataSet.#ctor
   - CRMScript.NetServer.NSStatisticsDataSet.SetDescription(String)
   - CRMScript.NetServer.NSStatisticsDataSet.SetLabel(String)
-  - CRMScript.NetServer.NSStatisticsDataSet.SetValues()
+  - CRMScript.NetServer.NSStatisticsDataSet.SetValues(NSStatisticsDataValue[])
   name: NSStatisticsDataSet
   nameWithType: NSStatisticsDataSet
   fullName: CRMScript.NetServer.NSStatisticsDataSet
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSStatisticsDataSet.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSStatisticsDataSet.GetDescription()
-  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
-  type: Method
-  summary: "\nTooltip for data value\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSStatisticsDataSet thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
-  id: 'GetLabel()'
-  so.intellisense: NSStatisticsDataSet.GetLabel
-  langs:
-  - crmscript
-  name: 'GetLabel()'
-  nameWithType: NSStatisticsDataSet.GetLabel()
-  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
-  type: Method
-  summary: "\nThe label for the data set\n"
-  remarks: 
-  syntax: 
-    content: String GetLabel()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSStatisticsDataSet thing;\nString label = thing.GetLabel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataSet.GetValues()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetValues()
-  id: 'GetValues()'
-  so.intellisense: NSStatisticsDataSet.GetValues
-  langs:
-  - crmscript
-  name: 'GetValues()'
-  nameWithType: NSStatisticsDataSet.GetValues()
-  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetValues()
-  type: Method
-  summary: "\nValues in this set<p></p>\n<strong>Returns:</strong>NSStatisticsDataValue[]<p></p>\n<pre><code>NSStatisticsDataSet thing;\nNSStatisticsDataValue[] values = thing.GetValues();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSStatisticsDataValue[] GetValues()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSStatisticsDataValue[]
-  example: 
-  - "\n<pre><code>NSStatisticsDataSet thing;\nNSStatisticsDataValue[] values = thing.GetValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatisticsDataSet.#ctor
   commentId: M:CRMScript.NetServer.NSStatisticsDataSet.#ctor
   id: '#ctor'
@@ -93,6 +34,66 @@ items:
   syntax: 
     content: NSStatisticsDataSet
   example: 
+- uid: CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSStatisticsDataSet.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSStatisticsDataSet.GetDescription()
+  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip for data value
+  example: 
+  - "\n<pre><code>NSStatisticsDataSet thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
+  id: 'GetLabel()'
+  so.intellisense: NSStatisticsDataSet.GetLabel
+  langs:
+  - crmscript
+  name: 'GetLabel()'
+  nameWithType: NSStatisticsDataSet.GetLabel()
+  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetLabel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The label for the data set
+  example: 
+  - "\n<pre><code>NSStatisticsDataSet thing;\nString label = thing.GetLabel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatisticsDataSet.GetValues()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.GetValues()
+  id: 'GetValues()'
+  so.intellisense: NSStatisticsDataSet.GetValues
+  langs:
+  - crmscript
+  name: 'GetValues()'
+  nameWithType: NSStatisticsDataSet.GetValues()
+  fullName: CRMScript.NetServer.NSStatisticsDataSet.GetValues()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSStatisticsDataValue[] GetValues()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSStatisticsDataValue[]
+      description: Values in this set
+  example: 
+  - "\n<pre><code>NSStatisticsDataSet thing;\nNSStatisticsDataValue[] values = thing.GetValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatisticsDataSet.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSStatisticsDataSet.SetDescription(String)
   id: 'SetDescription(String)'
@@ -103,14 +104,14 @@ items:
   nameWithType: NSStatisticsDataSet.SetDescription(String)
   fullName: CRMScript.NetServer.NSStatisticsDataSet.SetDescription(String)
   type: Method
-  summary: "\nTooltip for data value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip for data value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -125,33 +126,38 @@ items:
   nameWithType: NSStatisticsDataSet.SetLabel(String)
   fullName: CRMScript.NetServer.NSStatisticsDataSet.SetLabel(String)
   type: Method
-  summary: "\nThe label for the data set\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLabel(String label)
     parameters:
     - id: label
       type: CRMScript.Global.String
-      description: 
+      description: The label for the data set
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSStatisticsDataSet thing;\nString label;\nthing.SetLabel(label);</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataSet.SetValues()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.SetValues()
-  id: 'SetValues()'
+- uid: CRMScript.NetServer.NSStatisticsDataSet.SetValues(NSStatisticsDataValue[])
+  commentId: M:CRMScript.NetServer.NSStatisticsDataSet.SetValues(NSStatisticsDataValue[])
+  id: 'SetValues(NSStatisticsDataValue[])'
   so.intellisense: NSStatisticsDataSet.SetValues
   langs:
   - crmscript
-  name: 'SetValues()'
-  nameWithType: NSStatisticsDataSet.SetValues()
-  fullName: CRMScript.NetServer.NSStatisticsDataSet.SetValues()
+  name: 'SetValues(NSStatisticsDataValue[])'
+  nameWithType: NSStatisticsDataSet.SetValues(NSStatisticsDataValue[])
+  fullName: CRMScript.NetServer.NSStatisticsDataSet.SetValues(NSStatisticsDataValue[])
   type: Method
-  summary: "\nValues in this set\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValues(NSStatisticsDataValue[] values)
     parameters:
+    - id: values
+      type: CRMScript.NetServer.NSStatisticsDataValue[]
+      description: Values in this set
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSStatisticsDataSet thing;\nNSStatisticsDataValue[] values;\nthing.SetValues(values);</code></pre>\n"
 references:
