--- a/docs/api-reference/CRMScript.NetServer.NSStatisticsDataValue.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatisticsDataValue.yml
@@ -6,79 +6,19 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSStatisticsDataValue.#ctor
   - CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
   - CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
   - CRMScript.NetServer.NSStatisticsDataValue.GetValue()
-  - CRMScript.NetServer.NSStatisticsDataValue.#ctor
   - CRMScript.NetServer.NSStatisticsDataValue.SetDescription(String)
   - CRMScript.NetServer.NSStatisticsDataValue.SetLabel(String)
-  - CRMScript.NetServer.NSStatisticsDataValue.SetValue()
+  - CRMScript.NetServer.NSStatisticsDataValue.SetValue(Float)
   name: NSStatisticsDataValue
   nameWithType: NSStatisticsDataValue
   fullName: CRMScript.NetServer.NSStatisticsDataValue
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSStatisticsDataValue.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSStatisticsDataValue.GetDescription()
-  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
-  type: Method
-  summary: "\nTooltip for data value\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSStatisticsDataValue thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
-  id: 'GetLabel()'
-  so.intellisense: NSStatisticsDataValue.GetLabel
-  langs:
-  - crmscript
-  name: 'GetLabel()'
-  nameWithType: NSStatisticsDataValue.GetLabel()
-  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
-  type: Method
-  summary: "\nThe label for the data value\n"
-  remarks: 
-  syntax: 
-    content: String GetLabel()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSStatisticsDataValue thing;\nString label = thing.GetLabel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataValue.GetValue()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSStatisticsDataValue.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSStatisticsDataValue.GetValue()
-  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetValue()
-  type: Method
-  summary: "\nThe value for the data value\n"
-  remarks: 
-  syntax: 
-    content: Float GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Float
-      description:
-  example: 
-  - "\n<pre><code>NSStatisticsDataValue thing;\nFloat value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatisticsDataValue.#ctor
   commentId: M:CRMScript.NetServer.NSStatisticsDataValue.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSStatisticsDataValue
   example: 
+- uid: CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSStatisticsDataValue.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSStatisticsDataValue.GetDescription()
+  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip for data value
+  example: 
+  - "\n<pre><code>NSStatisticsDataValue thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
+  id: 'GetLabel()'
+  so.intellisense: NSStatisticsDataValue.GetLabel
+  langs:
+  - crmscript
+  name: 'GetLabel()'
+  nameWithType: NSStatisticsDataValue.GetLabel()
+  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetLabel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The label for the data value
+  example: 
+  - "\n<pre><code>NSStatisticsDataValue thing;\nString label = thing.GetLabel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSStatisticsDataValue.GetValue()
+  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSStatisticsDataValue.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSStatisticsDataValue.GetValue()
+  fullName: CRMScript.NetServer.NSStatisticsDataValue.GetValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Float GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description: The value for the data value
+  example: 
+  - "\n<pre><code>NSStatisticsDataValue thing;\nFloat value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSStatisticsDataValue.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSStatisticsDataValue.SetDescription(String)
   id: 'SetDescription(String)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSStatisticsDataValue.SetDescription(String)
   fullName: CRMScript.NetServer.NSStatisticsDataValue.SetDescription(String)
   type: Method
-  summary: "\nTooltip for data value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description:  Tooltip for data value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,33 +126,38 @@ items:
   nameWithType: NSStatisticsDataValue.SetLabel(String)
   fullName: CRMScript.NetServer.NSStatisticsDataValue.SetLabel(String)
   type: Method
-  summary: "\nThe label for the data value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLabel(String label)
     parameters:
     - id: label
       type: CRMScript.Global.String
-      description: 
+      description: The label for the data value
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSStatisticsDataValue thing;\nString label;\nthing.SetLabel(label);</code></pre>\n"
-- uid: CRMScript.NetServer.NSStatisticsDataValue.SetValue()
-  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.SetValue()
-  id: 'SetValue()'
+- uid: CRMScript.NetServer.NSStatisticsDataValue.SetValue(Float)
+  commentId: M:CRMScript.NetServer.NSStatisticsDataValue.SetValue(Float)
+  id: 'SetValue(Float)'
   so.intellisense: NSStatisticsDataValue.SetValue
   langs:
   - crmscript
-  name: 'SetValue()'
-  nameWithType: NSStatisticsDataValue.SetValue()
-  fullName: CRMScript.NetServer.NSStatisticsDataValue.SetValue()
+  name: 'SetValue(Float)'
+  nameWithType: NSStatisticsDataValue.SetValue(Float)
+  fullName: CRMScript.NetServer.NSStatisticsDataValue.SetValue(Float)
   type: Method
-  summary: "\nThe value for the data value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(Float value)
     parameters:
+    - id: value
+      type: CRMScript.Global.Float
+      description: The value for the data value
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSStatisticsDataValue thing;\nFloat value;\nthing.SetValue(value);</code></pre>\n"
 references:
